<project xmlns="http://maven.apache.org/POM/4.0.0" 
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>WatchList</groupId>
    <artifactId>WatchList</artifactId>
    <version>0.0.1-SNAPSHOT</version>
	<packaging>jar</packaging>
	
	
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>21</maven.compiler.release>
        <javafx.version>21</javafx.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20251224</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.18.2</version>
        </dependency>
        <dependency>
            <groupId>com.uwetrottmann.trakt5</groupId>
            <artifactId>trakt-java</artifactId>
            <version>6.18.0</version>
            <exclusions>
                <exclusion>
                    <groupId>com.squareup.okio</groupId>
                    <artifactId>okio</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.jetbrains.kotlin</groupId>
                    <artifactId>kotlin-stdlib-common</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.squareup.retrofit2</groupId>
            <artifactId>converter-gson</artifactId>
            <version>2.9.0</version>
        </dependency>
        <dependency>
            <groupId>org.jetbrains.kotlin</groupId>
            <artifactId>kotlin-stdlib-common</artifactId>
            <version>1.8.21</version>
        </dependency>
    </dependencies>

    <build>
        <finalName>WatchList</finalName>
        <sourceDirectory>src</sourceDirectory>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.3.0</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>application.Main</mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
        </plugins>

        <resources>
            <resource>
                <directory>src</directory>
                <includes>
                    <include>**/*.fxml</include>
                    <include>**/*.css</include>
                    <include>**/*.png</include>
                </includes>
            </resource>
        </resources>
    </build>

    <profiles>
        <profile>
            <id>release</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-dependency-plugin</artifactId>
                        <version>3.6.1</version>
                        <executions>
                            <execution>
                                <id>copy-javafx-win</id>
                                <phase>package</phase>
                                <goals><goal>copy-dependencies</goal></goals>
                                <configuration>
                                    <outputDirectory>${project.build.directory}/libs</outputDirectory>
                                    <includeGroupIds>org.openjfx</includeGroupIds>
                                    <classifier>win</classifier>
                                </configuration>
                            </execution>
                            <execution>
                                <id>copy-other-dependencies</id>
                                <phase>package</phase>
                                <goals><goal>copy-dependencies</goal></goals>
                                <configuration>
                                    <outputDirectory>${project.build.directory}/libs</outputDirectory>
                                    <excludeGroupIds>org.openjfx</excludeGroupIds>
                                    <excludeClassifiers>win,linux,mac</excludeClassifiers>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>

                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-antrun-plugin</artifactId>
                        <version>3.1.0</version>
                        <executions>
                            <execution>
                                <phase>package</phase>
                                <goals><goal>run</goal></goals>
                                <configuration>
                                    <target>
                                        <copy file="${project.build.directory}/${project.build.finalName}.jar"
                                              todir="${project.build.directory}/libs" />
                                    </target>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>

                    <plugin>
                        <groupId>org.panteleyev</groupId>
                        <artifactId>jpackage-maven-plugin</artifactId>
                        <version>1.7.4</version>
                        <configuration>
                            <jpackageExecutable>C:\Program Files\Java\jdk-25\bin\jpackage.exe</jpackageExecutable>
                            <name>WatchList</name>
                            <type>EXE</type>
                            <destination>${project.build.directory}/dist</destination>	
                            <appVersion>1.0.0</appVersion>
                            <vendor>MaxenceB9</vendor>
                            <runtimeImage>C:\Program Files\Java\jdk-25</runtimeImage>
                            <input>${project.build.directory}/libs</input>
                            <mainJar>WatchList.jar</mainJar>
                            <mainClass>application.Main</mainClass>
                            <javaOptions>
                                <javaOption>--module-path</javaOption>
                                <javaOption>${project.build.directory}/libs</javaOption>
                                <javaOption>--add-modules</javaOption>
                                <javaOption>javafx.controls,javafx.fxml</javaOption>
                            </javaOptions>
                            <winShortcut>true</winShortcut>
                            <winMenu>true</winMenu>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>